# tiny-faces-pytorch

./: .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  centers.mat  detect_image.py  evaluate.py  evaluate_model.py  flops.py  main.py  pyproject.toml  requirements.txt  setup.py  trainer.py
datasets/: __init__.py  coco.py  processor.py  templates.json  wider_face.py
models/: loss.py  model.py  models.py  utils.py
processing/: __init__.py  data_processor.py
tests/: test_dense_overlap.py  test_metrics.py
tinyfaces/: evaluate.py  evaluation.py
tinyfaces/clustering/: cluster.py  k_medoids.py
tinyfaces/datasets/: __init__.py  dense_overlap.py  processor.py  test_dense_overlap.py  wider_face.py
tinyfaces/models/: loss.py  model.py
tinyfaces/utils/: __init__.py  cluster.py  nms.py  test_dense_overlap.py  test_metrics.py  visualize.py
utils/: __init__.py  cluster.py  dense_overlap.py  dense_overlap.pyx  k_medoids.py  metrics.py  metrics.pyx  nms.py  nms.pyx  test_dense_overlap.py  test_metrics.py  visualize.py
